--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ python:
 cache: pip
 env:
     matrix:
-        - DJANGO="Django<1.9,>=1.8"
         - DJANGO="Django<1.10,>=1.9"
 install:
     - pip install $DJANGO
     - pip install -r mub_tests/requirements.txt
 script: python mub_tests/runtests.py
 sudo: false
+after_success: coveralls
