--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,10 @@ cache: pip
 env:
     matrix:
         - DJANGO="Django<1.10,>=1.9"
+        - DJANGO="Django<1.9,>=1.8"
 install:
     - pip install $DJANGO
     - pip install -r mub_tests/requirements.txt
-script: python mub_tests/runtests.py
+script: coverage run mub_tests/runtests.py
 sudo: false
 after_success: coveralls
