--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
     matrix:
         - DJANGO="Django<1.10,>=1.9"
         - DJANGO="Django<1.9,>=1.8"
+        - DJANGO="Django<1.8,>=1.7"
 install:
     - pip install $DJANGO
     - pip install -r mub_tests/requirements.txt
